# liblibinfo

./: LICENSE.txt  README.md  libinfo.c.in  liblibinfo.cmake
.github/workflows/: cmake.yml
example/: CMakeLists.txt  bar.c  bar.h  foo.h
